removed stupid button alignment bug

--- a/www/memo.css
+++ b/www/memo.css
@@ -569,12 +569,6 @@ h3 {
 .button:hover{
   background-color:rgba(0, 0, 0, 0.25);
 }
-@media all and (max-width:30em){
-  .button{
-    display:block;
-    margin:0.2em auto;
-  }
-}
 
 .save-button:enabled {
   color: var(--save-on-fg);
